--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "testjest": "jest src/testing/*.js",
     "autotest": "jest --watch src/testing/*.js",
     "start": "webpack serve --open",
-    "build": "webpack"
+    "build": "webpack",
+    "deploy": "gh-pages -d dist"
   },
   "repository": {
     "type": "git",
@@ -31,6 +32,7 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-webpack-plugin": "^4.0.1",
+    "gh-pages": "^5.0.0",
     "html-webpack-plugin": "^5.5.3",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
